# bluesky-finder

./: .gitignore  Makefile  RECOMMENDATIONS.md  pyproject.toml
bluesky_finder/: SPECS.md  at_client.py  cli.py  config.py  database.py  gui.py  llm.py  models.py  pipeline.py
bluesky_finder/templates/: export.html
scripts/: make_source.sh  make_source_small.sh
