[project]
name = "bluesky-finder"
version = "0.1.0"
description = "A pipeline to discover and evaluate 'topic associated' on Bluesky."
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [{name = "Matthew Dean Martin", email = "matthewdeanmartin@gmail.com"}]
dependencies = [
    "atproto>=0.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.0",
    "sqlalchemy>=2.0.0",
    "requests-cache>=1.0.0",
    "jinja2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
bluesky_finder = "bluesky_finder.cli:main"
bluesky-finder = "bluesky_finder.cli:main"

[tool.isort]
profile = "black"